--- a/src/GUI/MainWindow.fxml
+++ b/src/GUI/MainWindow.fxml
@@ -85,15 +85,15 @@
           </Menu>
             <Menu mnemonicParsing="false" text="View">
                <items>
-                  <CheckMenuItem fx:id="toggleInstruction" mnemonicParsing="false" text="Instruction tab">
+                  <CheckMenuItem fx:id="toggleInstruction" mnemonicParsing="false" selected="true" text="Instruction tab">
                      <accelerator>
                         <KeyCodeCombination alt="DOWN" code="DIGIT1" control="UP" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></CheckMenuItem>
-                  <CheckMenuItem fx:id="toggleMachineHex" mnemonicParsing="false" text="Machine code (hex) tab">
+                  <CheckMenuItem fx:id="toggleMachineHex" mnemonicParsing="false" selected="true" text="Machine code (hex) tab">
                      <accelerator>
                         <KeyCodeCombination alt="DOWN" code="DIGIT2" control="UP" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></CheckMenuItem>
-                  <CheckMenuItem fx:id="toggleMachineDec" mnemonicParsing="false" text="Machine code (dec) tab">
+                  <CheckMenuItem fx:id="toggleMachineDec" mnemonicParsing="false" selected="true" text="Machine code (dec) tab">
                      <accelerator>
                         <KeyCodeCombination alt="DOWN" code="DIGIT3" control="UP" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></CheckMenuItem>
@@ -113,7 +113,7 @@
       </MenuBar>
    </top>
    <center>
-      <TabPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <tabs>
           <Tab fx:id="codeTab" closable="false" text="Untitled code">
             <content>
