--- a/src/GUI/CodeDebugger.fxml
+++ b/src/GUI/CodeDebugger.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
@@ -7,27 +8,68 @@
 <?import javafx.scene.layout.*?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="960.0" prefWidth="1280.0" type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="800.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Label prefHeight="25.0" prefWidth="384.0" text="SYMBOL TABLE" textAlignment="CENTER" />
-            <AnchorPane fx:id="symbolTable" prefHeight="225.0" prefWidth="461.0" />
-            <HBox prefHeight="150.0" prefWidth="461.0">
+            <Label prefHeight="25.0" prefWidth="689.0" text="SYMBOL TABLE" textAlignment="CENTER">
+               <padding>
+                  <Insets left="15.0" />
+               </padding>
+            </Label>
+            <AnchorPane fx:id="symbolTable" prefHeight="594.0" prefWidth="1035.0" />
+            <HBox prefHeight="240.0" prefWidth="1035.0">
                <children>
-                  <AnchorPane fx:id="registerStatus" prefHeight="200.0" prefWidth="200.0" />
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+                  <AnchorPane fx:id="registerStatus" prefHeight="242.0" prefWidth="518.0" />
+                  <AnchorPane prefHeight="242.0" prefWidth="518.0" />
                </children>
             </HBox>
          </children>
       </VBox>
    </center>
    <left>
-      <VBox prefHeight="400.0" prefWidth="215.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="800.0" prefWidth="245.0" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" prefHeight="25.0" prefWidth="215.0" style="-fx-background-color: none;" text="COMPILED CODE" />
-            <AnchorPane fx:id="compiledCode" prefHeight="378.0" prefWidth="215.0" />
+            <Label alignment="CENTER" prefHeight="25.0" prefWidth="248.0" style="-fx-background-color: none;" text="COMPILED CODE" />
+            <AnchorPane fx:id="compiledCode" />
          </children>
       </VBox>
    </left>
-</BorderPane>
+   <bottom>
+      <VBox prefHeight="160.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="25.0" prefWidth="1280.0">
+               <children>
+                  <Label prefHeight="25.0" text="MEMORY VIEWER">
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label prefHeight="25.0" text="Address">
+                     <HBox.margin>
+                        <Insets left="250.0" />
+                     </HBox.margin>
+                  </Label>
+                  <TextField fx:id="searchField">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button fx:id="goButton" mnemonicParsing="false" text="Go to">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets top="2.0" />
+               </VBox.margin>
+            </HBox>
+            <AnchorPane fx:id="memory" prefHeight="135.0" prefWidth="1280.0" />
+         </children>
+      </VBox>
+   </bottom>
+</fx:root>
